Fix invisible blockquote

--- a/assets/scss/partials/_reset.scss
+++ b/assets/scss/partials/_reset.scss
@@ -1,6 +1,6 @@
 html,
 body {
-  background-color: $white;
+ // background-color: $white;
   color: $black;
   height: 100%;
 }
